--- a/index.html
+++ b/index.html
@@ -1,55 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <!-- start sw-rss-feed code --> 
-<script type="text/javascript"> 
-    <!-- 
-    rssfeed_url = new Array(); 
-    rssfeed_url[0]="https://www.nasa.gov/feeds/iotd-feed/";  
-    rssfeed_frame_width="230"; 
-    rssfeed_frame_height="260"; 
-    rssfeed_scroll="on"; 
-    rssfeed_scroll_step="6"; 
-    rssfeed_scroll_bar="off"; 
-    rssfeed_target="_blank"; 
-    rssfeed_font_size="12"; 
-    rssfeed_font_face=""; 
-    rssfeed_border="on"; 
-    rssfeed_css_url="https://feed.surfing-waves.com/css/style3a.css"; 
-    rssfeed_title="on"; 
-    rssfeed_title_name=""; 
-    rssfeed_title_bgcolor="#3366ff"; 
-    rssfeed_title_color="#fff"; 
-    rssfeed_title_bgimage=""; 
-    rssfeed_footer="off"; 
-    rssfeed_footer_name="rss feed"; 
-    rssfeed_footer_bgcolor="#fff"; 
-    rssfeed_footer_color="#333"; 
-    rssfeed_footer_bgimage=""; 
-    rssfeed_item_title_length="50"; 
-    rssfeed_item_title_color="#666"; 
-    rssfeed_item_bgcolor="#fff"; 
-    rssfeed_item_bgimage=""; 
-    rssfeed_item_border_bottom="on"; 
-    rssfeed_item_source_icon="off"; 
-    rssfeed_item_date="off"; 
-    rssfeed_item_description="on"; 
-    rssfeed_item_description_length="120"; 
-    rssfeed_item_description_color="#666"; 
-    rssfeed_item_description_link_color="#333"; 
-    rssfeed_item_description_tag="off"; 
-    rssfeed_no_items="0"; 
-    rssfeed_cache = "760573470a7931b681590464fd125298"; 
-    //--> 
-    </script> 
-    <script type="text/javascript" src="//feed.surfing-waves.com/js/rss-feed.js"></script> 
-    <!-- The link below helps keep this service FREE, and helps other people find the SW widget. Please be cool and keep it! Thanks. --> 
-    <div style="color:#ccc;font-size:10px; text-align:right; width:230px;">powered by <a href="https://surfing-waves.com" rel="noopener" target="_blank" style="color:#ccc;">Surfing Waves</a></div> 
-    <!-- end sw-rss-feed code -->
+    <div id="top"></div>
+    <h1 class="topHeader">Outer Space News</h1>
+    <input class="navButton"type="button" value="Bottom Of Page"onClick="document.getElementById('bottom').scrollIntoView();" />
+    <div class="container">
+    <div class="tabs">
+        <span data-tab-value="#tab_1">Nasa Image Of The Day</span>
+        <span data-tab-value="#tab_2">Nasa News Releases</span>
+        <span data-tab-value="#tab_3">International Space Station</span>
+        <span data-tab-value="#tab_4">SpaceX</span>
+        <span data-tab-value="#tab_5">European Space Agency (ESA)</span>
+        <span data-tab-value="#tab_6">US Space Force</span>
+    </div>
+
+    <div class="tab-content">
+        <div class="tabs__tab active" id="tab_1" data-tab-info>
+            <p>
+                <script
+                    src="//rss.bloople.net/?url=https%3A%2F%2Fwww.nasa.gov%2Ffeeds%2Fiotd-feed%2F&limit=20&showicon=true&type=js"></script>
+            </p>
+
+        </div>
+        <div class="tabs__tab" id="tab_2" data-tab-info>
+            <p>
+                <script
+                    src="//rss.bloople.net/?url=https%3A%2F%2Fwww.nasa.gov%2Fnews-release%2Ffeed%2F&limit=20&showicon=true&type=js"></script>
+            </p>
+
+        </div>
+        <div class="tabs__tab" id="tab_3" data-tab-info>
+            <p>
+                <script
+                    src="//rss.bloople.net/?url=https%3A%2F%2Fwww.nasa.gov%2Fmissions%2Fstation%2Ffeed%2F&limit=20&showicon=true&type=js"></script>
+            </p>
+
+        </div>
+        <div class="tabs__tab" id="tab_4" data-tab-info>
+            <p>
+                <script
+                    src="//rss.bloople.net/?url=https%3A%2F%2Fspacenews.com%2Ftag%2Fspacex%2Ffeed%2F&limit=20&showicon=true&type=js"></script>
+            </p>
+
+        </div>
+        <div class="tabs__tab" id="tab_5" data-tab-info>
+            <p>
+                <script
+                    src="//rss.bloople.net/?url=https%3A%2F%2Fwww.esa.int%2Frssfeed%2FTopNews&limit=20&showicon=true&type=js"></script>
+            </p>
+
+        </div>
+        <div class="tabs__tab" id="tab_6" data-tab-info>
+            <p>
+                <script
+                    src="//rss.bloople.net/?url=https%3A%2F%2Fwww.spaceforce.mil%2FDesktopModules%2FArticleCS%2FRSS.ashx%3FContentType%3D1%26Site%3D1%26isdashboardselected%3D0%26max%3D20&limit=20&showicon=true&type=js"></script>
+            </p>
+
+        </div>
+    </div>
+    </div>
+    <div class="disclosure">
+        <p>This website is not owned by or affiliated with NASA, SpaceX, ESA, the US Space Force, or SpaceNews. All content provided is for educational purposes only. <br> All articles are sourced via public RSS feeds provided by the previously mentioned organizations or by independant news sources.</p>
+        <p>Page Owner: Zach Pieratt</p>
+    </div>
+    <div class="disclosure">
+    </div>
+    <script type="text/javascript" src="src/script.js"></script>
+    <input class="navButton"type="button" value="Return to Top"onClick="document.getElementById('top').scrollIntoView();" />
+    <div id="bottom"></div>
 </body>
+
 </html>
