Added API call for number of people in space currently, ammeded disclosure

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div id="top"></div>
     <h1 class="topHeader">Outer Space News</h1>
     <input class="navButton"type="button" value="Bottom Of Page"onClick="document.getElementById('bottom').scrollIntoView();" />
+    <div id="peopleInSpace"></div>
     <div class="container">
     <div class="tabs">
         <span data-tab-value="#tab_1">Nasa Image Of The Day</span>
@@ -65,14 +66,15 @@
     </div>
     </div>
     <div class="disclosure">
-        <p>This website is not owned by or affiliated with NASA, SpaceX, ESA, the US Space Force, or SpaceNews. All content provided is for educational purposes only. <br> All articles are sourced via public RSS feeds provided by the previously mentioned organizations or by independant news sources.</p>
-        <p>Page Owner: Zach Pieratt</p>
+        <p>This website is not owned by or affiliated with NASA, SpaceX, ESA, United States Space Force, or SpaceNews. All content provided is for educational purposes only. <br> All articles are sourced via public RSS feeds provided by the previously mentioned organizations or by independant news sources.</p>
+        <p>Page Owner: Zach Pieratt <br><a style="font-size: x-large; color: white;" href=https://github.com/zachpieratt/outerspacenews.io>GitHub</a></p>|
     </div>
     <div class="disclosure">
     </div>
-    <script type="text/javascript" src="src/script.js"></script>
     <input class="navButton"type="button" value="Return to Top"onClick="document.getElementById('top').scrollIntoView();" />
     <div id="bottom"></div>
+    <script type="text/javascript" src="src/script.js"></script>
+    <script type="text/javascript" src="/src/fetch.js"></script>
 </body>
 
 </html>
