--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         onClick="document.getElementById('top').scrollIntoView();" />
     <div id="bottom"></div>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script type="module" src="/src/fetch.js"></script>
-    <script type="text/javascript" src="/src/script.js"></script>
+    <script type="module" src="src/fetch.js"></script>
+    <script type="text/javascript" src="src/script.js"></script>
 </body>
 
 </html>
