--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <link rel="stylesheet" href="styles.css">
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script type="module" src="/src/fetch.js"></script>
 </head>
 
 <body>
@@ -79,9 +80,7 @@
     <input class="navButton" type="button" value="Return to Top"
         onClick="document.getElementById('top').scrollIntoView();" />
     <div id="bottom"></div>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script type="module" src="src/fetch.js"></script>
-    <script type="text/javascript" src="src/script.js"></script>
+    <script type="text/javascript" src="/src/script.js"></script>
 </body>
 
 </html>
