--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="styles.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script type="module" src="/src/fetch.js"></script>
+    <script type="module" src="src/fetch.js"></script>
 </head>
 
 <body>
@@ -80,7 +80,7 @@
     <input class="navButton" type="button" value="Return to Top"
         onClick="document.getElementById('top').scrollIntoView();" />
     <div id="bottom"></div>
-    <script type="text/javascript" src="/src/script.js"></script>
+    <script type="text/javascript" src="src/script.js"></script>
 </body>
 
 </html>
