--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="google-site-verification" content="nilhlKOxEC1tLEtiGnOzsWYoTYGcxRVBFbsCLk3cZuo" />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script type="module" src="src/fetch.js"></script>
     <div class="loader"></div>
