fixed file name structure

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <option value="default">Choose a model</option>
                     <option value="apolloLunarModule">Apollo Lunar Module</option>
                     <option value="Hubble">Hubble Telescope</option>
-                    <option value="iss_stationary">Internationl Space Station</option>
+                    <option value="ISS_stationary">Internationl Space Station</option>
                     <option value="Perseverance">Perseverance</option>
                     <option value="Voyager">Voyager</option>
                 </select>
