--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta name="google-site-verification" content="nilhlKOxEC1tLEtiGnOzsWYoTYGcxRVBFbsCLk3cZuo" />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="styles.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script type="importmap">
@@ -97,7 +99,7 @@
                     <option value="default">Choose a model</option>
                     <option value="apolloLunarModule">Apollo Lunar Module</option>
                     <option value="Hubble">Hubble Telescope</option>
-                    <option value="ISS_stationary">Internationl Space Station</option>
+                    <option value="ISS_stationary">International Space Station</option>
                     <option value="Perseverance">Perseverance</option>
                     <option value="Voyager">Voyager</option>
                 </select>
