added title and meta desc

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+    <meta content="Keep up to date with the most recent space news and events. Check out interactive 3D models of various NASA projects!" name="description">
     <link rel="stylesheet" href="styles.css">
+    <title>Outer Space News</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script type="importmap">
         {
