--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width">
     <meta content="Keep up to date with the most recent space news and events. Check out interactive 3D models of various NASA projects!" name="description">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="public/satellite.svg">
     <title>Outer Space News</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script type="importmap">
