--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4XTMBQ7WWR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4XTMBQ7WWR');
+</script>
     <meta name="google-site-verification" content="nilhlKOxEC1tLEtiGnOzsWYoTYGcxRVBFbsCLk3cZuo" />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta charset="UTF-8">
